# copy_Man

./: .gitignore  0130_修正記録.md  0219_修正記録.md  README.md  cp_man_v3.spec  cp_man_v4.py  dd_test.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  tests.yml
logs/: copy_manager.log.2024-10-07  copy_manager.log.2024-10-08  copy_manager.log.2024-10-18
mod/copy_support/: README.md  __init__.py  mac_linux.py  main.py  win.py  仕様書.md
mod/toma_logger/: README.md  __init__.py  logger.py
old_version's/: cp_man_v1.py  cp_man_v2.1.py  cp_man_v2.py  cp_man_v3.py
tests/: conftest.py  test_copy_operations.py  test_copy_platform.py  test_cp_man.py  test_logger.py  test_ui_operations.py
